--- a/Views/Shared/_LayoutManagement.cshtml
+++ b/Views/Shared/_LayoutManagement.cshtml
@@ -72,6 +72,11 @@
         </a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" asp-action="Categories" asp-controller="Management">
+          <i class="fas fa-fw fa-chart-area"></i>
+          <span>Categorias</span></a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="charts.html">
           <i class="fas fa-fw fa-chart-area"></i>
           <span>Produtos</span></a>
