--- a/Views/Shared/_LayoutManagement.cshtml
+++ b/Views/Shared/_LayoutManagement.cshtml
@@ -82,7 +82,7 @@
           <span>Fornecedores</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" asp-action="Products" asp-controller="Management">
           <i class="fas fa-fw fa-chart-area"></i>
           <span>Produtos</span></a>
       </li>
