--- a/Views/Management/Categories.cshtml
+++ b/Views/Management/Categories.cshtml
@@ -1,3 +1,5 @@
+@model IEnumerable<generic_market_csharp.Models.Category>
+
 @{
     Layout = "_LayoutManagement";
 }
@@ -8,3 +10,26 @@
     Criar nova categoria
 </a>
 <hr/>
+
+<table class="table table-striped table-bordered">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Ações</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var category in Model)
+        {
+            <tr>
+                <td>@category.Id</td>
+                <td>@category.Name</td>
+                <td>
+                    <button class="btn btn-primary">Editar</button>
+                    <button class="btn btn-danger">Deletar</button>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
