--- a/Views/Shared/_LayoutManagement.cshtml
+++ b/Views/Shared/_LayoutManagement.cshtml
@@ -20,6 +20,15 @@
   <!-- Custom styles for this template-->
   <link href="~/css/sb-admin.css" rel="stylesheet">
 
+  <!-- Jquery-->
+  <script src="~/vendor/jquery/jquery.min.js"></script>
+
+  <!-- Core plugin JavaScript-->
+  <script src="~/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- DataTables-->
+  <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+
 </head>
 
 <body id="page-top">
@@ -143,11 +152,7 @@
   </div>
 
   <!-- Bootstrap core JavaScript-->
-  <script src="~/vendor/jquery/jquery.min.js"></script>
   <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Core plugin JavaScript-->
-  <script src="~/vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for all pages-->
   <script src="~/js/sb-admin.min.js"></script>
