--- a/Views/Management/Categories.cshtml
+++ b/Views/Management/Categories.cshtml
@@ -15,7 +15,7 @@
     <thead>
         <tr>
             <th>Id</th>
-            <th>Name</th>
+            <th>Nome</th>
             <th>Ações</th>
         </tr>
     </thead>
