--- a/Views/Management/Categories.cshtml
+++ b/Views/Management/Categories.cshtml
@@ -11,7 +11,13 @@
 </a>
 <hr/>
 
-<table class="table table-striped table-bordered">
+<script>
+    $(document).ready(function () {
+        $('#table-categories').DataTable();
+    });
+</script>
+
+<table id="table-categories" class="table table-striped table-bordered">
     <thead>
         <tr>
             <th>Id</th>
