--- a/Views/Management/Suppliers.cshtml
+++ b/Views/Management/Suppliers.cshtml
@@ -1,3 +1,5 @@
+@model IEnumerable<generic_market_csharp.Models.Supplier>
+
 @{
     Layout = "_LayoutManagement";
 }
@@ -8,3 +10,44 @@
     Criar novo fornecedor
 </a>
 <hr/>
+
+<script>
+    $(document).ready(function () {
+        $('#table-suppliers').DataTable();
+    });
+</script>
+
+<table id="table-suppliers" class="table table-striped table-bordered">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Nome</th>
+            <th>Email</th>
+            <th>Telefone</th>
+            <th>Ações</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var supplier in Model)
+        {
+            <tr>
+                <td>@supplier.Id</td>
+                <td>@supplier.Name</td>
+                <td>@supplier.Email</td>
+                <td>@supplier.Phone</td>
+                <td>
+                    <a
+                        class="btn btn-primary"
+                        href="/Management/EditSupplier/@supplier.Id"
+                    >
+                        Editar
+                    </a>
+                    <form style="display: inline;" asp-controller="Supplier" asp-action="Delete">
+                        <input type="hidden" name="id" id="id" value="@supplier.Id">
+                        <button class="btn btn-danger">Deletar</button>
+                    </form>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
