--- a/Views/Management/Products.cshtml
+++ b/Views/Management/Products.cshtml
@@ -1,3 +1,5 @@
+@model IEnumerable<generic_market_csharp.Models.Product>
+
 @{
     Layout = "_LayoutManagement";
 }
@@ -8,3 +10,60 @@
     Criar novo produto
 </a>
 <hr/>
+
+<script>
+    $(document).ready(function () {
+        $('#table-products').DataTable();
+    });
+</script>
+
+<table id="table-products" class="table table-striped table-bordered">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Nome</th>
+            <th>Categoria</th>
+            <th>Fornecedor</th>
+            <th>Preço de custo</th>
+            <th>Preço de venda</th>
+            <th>Tipo de medição</th>
+            <th>Ações</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var product in Model)
+        {
+            <tr>
+                <td>@product.Id</td>
+                <td>@product.Name</td>
+                <td>@product.Category.Name</td>
+                <td>@product.Supplier.Name</td>
+                <td>@product.PurchasePrice</td>
+                <td>@product.SalePrice</td>
+                <td>
+                    @if(@product.MeasurementType == 1) {
+                        <span>Litro</span>
+                    } else if (@product.MeasurementType == 2) {
+                        <span>Quilo</span>
+                    } else if (@product.MeasurementType == 3) {
+                        <span>Unidade</span>
+                    } else {
+                        <span>Inválido</span>
+                    }
+                </td>
+                <td>
+                    <a
+                        class="btn btn-primary"
+                        href="/Management/EditProduct/@product.Id"
+                    >
+                        Editar
+                    </a>
+                    <form style="display: inline;" asp-controller="Product" asp-action="Delete">
+                        <input type="hidden" name="id" id="id" value="@product.Id">
+                        <button class="btn btn-danger">Deletar</button>
+                    </form>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
