--- a/Views/Shared/_LayoutManagement.cshtml
+++ b/Views/Shared/_LayoutManagement.cshtml
@@ -77,28 +77,28 @@
       <li class="nav-item">
         <a class="nav-link" href="index.html">
           <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Painel</span>
+          <span>Dashboard</span>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" asp-action="Categories" asp-controller="Management">
           <i class="fas fa-fw fa-chart-area"></i>
-          <span>Categorias</span></a>
+          <span>Categories</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" asp-action="Suppliers" asp-controller="Management">
           <i class="fas fa-fw fa-chart-area"></i>
-          <span>Fornecedores</span></a>
+          <span>Suppliers</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" asp-action="Products" asp-controller="Management">
           <i class="fas fa-fw fa-chart-area"></i>
-          <span>Produtos</span></a>
+          <span>Products</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="tables.html">
           <i class="fas fa-fw fa-table"></i>
-          <span>Funcionários</span></a>
+          <span>Employees</span></a>
       </li>
     </ul>
 
