--- a/Views/Management/Categories.cshtml
+++ b/Views/Management/Categories.cshtml
@@ -4,10 +4,10 @@
     Layout = "_LayoutManagement";
 }
 
-<h2>Categorias</h2>
+<h2>Categories</h2>
 <hr/>
 <a asp-action="NewCategory" asp-controller="Management" class="btn btn-success">
-    Criar nova categoria
+    Create new category
 </a>
 <hr/>
 
@@ -21,8 +21,8 @@
     <thead>
         <tr>
             <th>Id</th>
-            <th>Nome</th>
-            <th>Ações</th>
+            <th>Name</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -36,11 +36,11 @@
                         class="btn btn-primary"
                         href="/Management/EditCategory/@category.Id"
                     >
-                        Editar
+                        Edit
                     </a>
                     <form style="display: inline;" asp-controller="Category" asp-action="Delete">
                         <input type="hidden" name="id" id="id" value="@category.Id">
-                        <button class="btn btn-danger">Deletar</button>
+                        <button class="btn btn-danger">Delete</button>
                     </form>
                 </td>
             </tr>
