--- a/Views/Management/EditCategory.cshtml
+++ b/Views/Management/EditCategory.cshtml
@@ -4,13 +4,13 @@
     Layout = "_LayoutManagement";
 }
 
-<h2>Editar categoria</h2>
+<h2>Edit category</h2>
 <hr/>
 <form class="form-horizontal" asp-controller="Category" asp-action="Update" method="POST">
     <input type="hidden" asp-for="Id">
-    <label asp-for="Name">Nome</label>
-    <input type="text" asp-for="Name" class="form-control" placeholder="Nome da categoria"><br>
+    <label asp-for="Name">Name</label>
+    <input type="text" asp-for="Name" class="form-control" placeholder="Category name"><br>
     <span asp-validation-for="Name"></span>
-    <button class="btn btn-success">Atualizar</button>
+    <button class="btn btn-success">Update</button>
 </form>
 <hr/>
