--- a/Views/Management/Index.cshtml
+++ b/Views/Management/Index.cshtml
@@ -10,10 +10,10 @@
         <div class="card-body-icon">
             <i class="fas fa-fw fa-comments"></i>
         </div>
-        <div class="mr-5">Categorias</div>
+        <div class="mr-5">Categories</div>
         </div>
         <a class="card-footer text-white clearfix small z-1" asp-action="Categories" asp-controller="Management">
-        <span class="float-left">Ver todas</span>
+        <span class="float-left">View all</span>
         <span class="float-right">
             <i class="fas fa-angle-right"></i>
         </span>
@@ -26,10 +26,10 @@
         <div class="card-body-icon">
             <i class="fas fa-fw fa-list"></i>
         </div>
-        <div class="mr-5">Fornecedores</div>
+        <div class="mr-5">Suppliers</div>
         </div>
         <a class="card-footer text-white clearfix small z-1" asp-action="Suppliers" asp-controller="Management">
-        <span class="float-left">Ver todos</span>
+        <span class="float-left">View all</span>
         <span class="float-right">
             <i class="fas fa-angle-right"></i>
         </span>
@@ -42,10 +42,10 @@
         <div class="card-body-icon">
             <i class="fas fa-fw fa-shopping-cart"></i>
         </div>
-        <div class="mr-5">Produtos</div>
+        <div class="mr-5">Products</div>
         </div>
         <a class="card-footer text-white clearfix small z-1" asp-action="Products" asp-controller="Management">
-        <span class="float-left">Ver todos</span>
+        <span class="float-left">View all</span>
         <span class="float-right">
             <i class="fas fa-angle-right"></i>
         </span>
@@ -58,10 +58,10 @@
         <div class="card-body-icon">
             <i class="fas fa-fw fa-life-ring"></i>
         </div>
-        <div class="mr-5">Vendas</div>
+        <div class="mr-5">Sales</div>
         </div>
         <a class="card-footer text-white clearfix small z-1" href="#">
-        <span class="float-left">Ver todas</span>
+        <span class="float-left">View all</span>
         <span class="float-right">
             <i class="fas fa-angle-right"></i>
         </span>
