--- a/Views/Management/NewCategory.cshtml
+++ b/Views/Management/NewCategory.cshtml
@@ -4,13 +4,13 @@
     Layout = "_LayoutManagement";
 }
 
-<h2>Nova categoria</h2>
+<h2>New category</h2>
 <hr/>
 <form class="form-horizontal" asp-controller="Category" asp-action="Save" method="POST">
     <input type="hidden" asp-for="Id" value="0">
-    <label asp-for="Name">Nome</label>
-    <input type="text" asp-for="Name" class="form-control" placeholder="Nome da categoria"><br>
+    <label asp-for="Name">Name</label>
+    <input type="text" asp-for="Name" class="form-control" placeholder="Category name"><br>
     <span asp-validation-for="Name"></span>
-    <button class="btn btn-success">Cadastrar</button>
+    <button class="btn btn-success">Register </button>
 </form>
 <hr/>
