--- a/Views/Shared/_LayoutManagement.cshtml
+++ b/Views/Shared/_LayoutManagement.cshtml
@@ -75,7 +75,7 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" asp-action="Index" asp-controller="Management">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Dashboard</span>
         </a>
