--- a/Views/Shared/_LayoutManagement.cshtml
+++ b/Views/Shared/_LayoutManagement.cshtml
@@ -96,6 +96,11 @@
           <span>Products</span></a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" asp-action="Promotions" asp-controller="Management">
+          <i class="fas fa-fw fa-chart-area"></i>
+          <span>Promotions</span></a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="tables.html">
           <i class="fas fa-fw fa-table"></i>
           <span>Employees</span></a>
