--- a/Views/Management/NewDiscountedSale.cshtml
+++ b/Views/Management/NewDiscountedSale.cshtml
@@ -1,15 +1,15 @@
-@model generic_market_csharp.Models.DTO.PromotionDTO;
+@model generic_market_csharp.Models.DTO.DiscountedSaleDTO;
 
 @{
     Layout = "_LayoutManagement";
 }
 
-<h2>New promotion</h2>
+<h2>New discounted sales</h2>
 <hr/>
-<form class="form-horizontal" asp-controller="Promotion" asp-action="Save" method="POST">
+<form class="form-horizontal" asp-controller="DiscountedSale" asp-action="Save" method="POST">
     <input type="hidden" asp-for="Id" value="0">
     <label asp-for="Name">Name</label>
-    <input type="text" asp-for="Name" class="form-control" placeholder="Promotion name">
+    <input type="text" asp-for="Name" class="form-control" placeholder="Discounted sale name">
     <span asp-validation-for="Name"></span><br>
     <label asp-for="ProductId">Product</label>
     <select class="form-control" asp-for="ProductId" asp-items='@(new SelectList(@ViewBag.Products, "Id", "Name"))'></select>
