--- a/Views/Shared/_LayoutManagement.cshtml
+++ b/Views/Shared/_LayoutManagement.cshtml
@@ -96,9 +96,9 @@
           <span>Products</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" asp-action="Promotions" asp-controller="Management">
+        <a class="nav-link" asp-action="DiscountedSales" asp-controller="Management">
           <i class="fas fa-fw fa-chart-area"></i>
-          <span>Promotions</span></a>
+          <span>Discounted Sales</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="tables.html">
