--- a/Views/Management/DiscountedSales.cshtml
+++ b/Views/Management/DiscountedSales.cshtml
@@ -1,3 +1,5 @@
+@model IEnumerable<generic_market_csharp.Models.DiscountedSale>
+
 @{
     Layout = "_LayoutManagement";
 }
@@ -8,3 +10,44 @@
     Create new discounted sale
 </a>
 <hr/>
+
+<script>
+    $(document).ready(function () {
+        $('#table-discounted-sales').DataTable();
+    });
+</script>
+
+<table id="table-discounted-sales" class="table table-striped table-bordered">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Product</th>
+            <th>Percentage</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var discountedSale in Model)
+        {
+            <tr>
+                <td>@discountedSale.Id</td>
+                <td>@discountedSale.Name</td>
+                <td>@discountedSale.Product.Name</td>
+                <td>@discountedSale.Percentage%</td>
+                <td>
+                    <a
+                        class="btn btn-primary"
+                        href="/Management/EditDiscountedSale/@discountedSale.Id"
+                    >
+                        Edit
+                    </a>
+                    <form style="display: inline;" asp-controller="DiscountedSale" asp-action="Delete">
+                        <input type="hidden" name="id" id="id" value="@discountedSale.Id">
+                        <button class="btn btn-danger">Delete</button>
+                    </form>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
