feat: customize data tables

--- a/Views/Management/DiscountedSales.cshtml
+++ b/Views/Management/DiscountedSales.cshtml
@@ -13,7 +13,9 @@
 
 <script>
     $(document).ready(function () {
-        $('#table-discounted-sales').DataTable();
+        $('#table-discounted-sales').DataTable({
+            "info": false
+        });
     });
 </script>
 
