--- a/Views/Management/Categories.cshtml
+++ b/Views/Management/Categories.cshtml
@@ -13,7 +13,9 @@
 
 <script>
     $(document).ready(function () {
-        $('#table-categories').DataTable();
+        $('#table-categories').DataTable({
+            "info": false
+        });
     });
 </script>
 
