feat: change icons

--- a/Views/Shared/_LayoutManagement.cshtml
+++ b/Views/Shared/_LayoutManagement.cshtml
@@ -83,22 +83,22 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" asp-action="Categories" asp-controller="Management">
-          <i class="fas fa-fw fa-chart-area"></i>
+          <i class="fas fa-fw fa-layer-group"></i>
           <span>Categories</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" asp-action="Suppliers" asp-controller="Management">
-          <i class="fas fa-fw fa-chart-area"></i>
+          <i class="fas fa-fw fa-parachute-box"></i>
           <span>Suppliers</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" asp-action="Products" asp-controller="Management">
-          <i class="fas fa-fw fa-chart-area"></i>
+          <i class="fas fa-fw fa-box"></i>
           <span>Products</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" asp-action="DiscountedSales" asp-controller="Management">
-          <i class="fas fa-fw fa-chart-area"></i>
+          <i class="fas fa-fw fa-percent"></i>
           <span>Discounted Sales</span></a>
       </li>
     </ul>
