--- a/Views/Management/Index.cshtml
+++ b/Views/Management/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="card text-white bg-primary o-hidden h-100">
         <div class="card-body">
         <div class="card-body-icon">
-            <i class="fas fa-fw fa-comments"></i>
+            <i class="fas fa-fw fa-layer-group"></i>
         </div>
         <div class="mr-5">Categories</div>
         </div>
@@ -24,7 +24,7 @@
     <div class="card text-white bg-warning o-hidden h-100">
         <div class="card-body">
         <div class="card-body-icon">
-            <i class="fas fa-fw fa-list"></i>
+            <i class="fas fa-fw fa-parachute-box"></i>
         </div>
         <div class="mr-5">Suppliers</div>
         </div>
@@ -40,7 +40,7 @@
     <div class="card text-white bg-success o-hidden h-100">
         <div class="card-body">
         <div class="card-body-icon">
-            <i class="fas fa-fw fa-shopping-cart"></i>
+            <i class="fas fa-fw fa-box"></i>
         </div>
         <div class="mr-5">Products</div>
         </div>
@@ -56,7 +56,7 @@
     <div class="card text-white bg-danger o-hidden h-100">
         <div class="card-body">
         <div class="card-body-icon">
-            <i class="fas fa-fw fa-life-ring"></i>
+            <i class="fas fa-fw fa-shopping-cart"></i>
         </div>
         <div class="mr-5">Sales</div>
         </div>
