--- a/Views/CashDesk/Index.cshtml
+++ b/Views/CashDesk/Index.cshtml
@@ -30,34 +30,31 @@
             <div class="col-sm-4">
                 <h2>Product: </h2>
                 <div class="input-group">
-                    <input type="search" class="form-control" placeholder="Product code">
+                    <input type="search" class="form-control" placeholder="Product code" id="search-product-ipt">
                     <span class="input-group-btn">
-                        <button class="btn btn-success" type="button">Search</button>
+                        <button class="btn btn-success" type="button" id="search-product-btn">Search</button>
                     </span>
                 </div>
                 <br>
                 <h3>Info</h3>
                 <hr>
-                <form class="form-horizontal">
-                <label>Name</label>
-                <input type="text" class="form-control" placeholder="Product name" disabled>
-                <br>
-                <label>Category</label>
-                <input type="text" class="form-control" placeholder="Category name" disabled>
-                <br>
-                <label>Supplier</label>
-                <input type="text" class="form-control" placeholder="Supplier name" disabled>
-                <br>
-                <label>Purchase price</label>
-                <input class="form-control" type="number" step="any" placeholder="0.00" disabled>
-                <span></span><br>
-                <label>Sale price</label>
-                <input class="form-control"  type="number" step="any" placeholder="0.00" disabled><br>
-                
-                <label>Count</label>
-                <input class="form-control" type="number" step="any" placeholder="0"><br>
-                
-                <button class="btn btn-success">Confirm</button>
+                <form class="form-horizontal" id="product-form">
+                    <label>Name</label>
+                    <input type="text" class="form-control" placeholder="Product name" disabled id="product-name" required>
+                    <br>
+                    <label>Category</label>
+                    <input type="text" class="form-control" placeholder="Category name" disabled id="product-category" required>
+                    <br>
+                    <label>Supplier</label>
+                    <input type="text" class="form-control" placeholder="Supplier name" disabled id="product-supplier" required>
+                    <br>
+                    <label>Sale price</label>
+                    <input class="form-control"  type="number" step="any" placeholder="0.00" disabled id="product-sale-price" required><br>
+                    
+                    <label>Count</label>
+                    <input class="form-control" type="number" step="any" placeholder="0" id="product-count" required><br>
+                    
+                    <button class="btn btn-success">Confirm</button>
                 </form>
 
             </div>
@@ -65,7 +62,7 @@
                     <h3>Purchase: </h3>
                     <hr>
                 <div id="table-scroll">
-                    <table id="produtos" class="table table-striped table-bordered">
+                    <table id="products-table" class="table table-striped table-bordered">
                         <thead>
                             <tr>
                                 <th>ID</th>
