fix: table head in index of cash desk

--- a/Views/CashDesk/Index.cshtml
+++ b/Views/CashDesk/Index.cshtml
@@ -69,9 +69,8 @@
                                 <th>Name</th>
                                 <th>Count</th>
                                 <th>Sale price</th>
-                                <th>Measurement type</th>
                                 <th>Total</th>
-                                <th>Remove</th>
+                                <th>Action</th>
                                 </tr>
                                 </thead>
                         <tbody>  
