--- a/Views/Shared/_LayoutManagement.cshtml
+++ b/Views/Shared/_LayoutManagement.cshtml
@@ -97,6 +97,11 @@
           <span>Products</span></a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" asp-action="Stocks" asp-controller="Management">
+          <i class="fas fa-fw fa-percent"></i>
+          <span>Stock</span></a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" asp-action="DiscountedSales" asp-controller="Management">
           <i class="fas fa-fw fa-percent"></i>
           <span>Discounted Sales</span></a>
