feat: change in percentage statement

--- a/Views/Management/DiscountedSales.cshtml
+++ b/Views/Management/DiscountedSales.cshtml
@@ -36,7 +36,7 @@
                 <td>@discountedSale.Id</td>
                 <td>@discountedSale.Name</td>
                 <td>@discountedSale.Product.Name</td>
-                <td>@discountedSale.Percentage%</td>
+                <td>@(discountedSale.Percentage * 100)%</td>
                 <td>
                     <a
                         class="btn btn-primary"
