feat: translate words from portuguese to english

--- a/Views/Management/EditProduct.cshtml
+++ b/Views/Management/EditProduct.cshtml
@@ -25,9 +25,9 @@
     <span asp-validation-for="SalePrice"></span><br>
     <label asp-for="MeasurementType">Measurement type</label>
     <select class="form-control" asp-for="MeasurementType">
-        <option value="1">Litro</option>
-        <option value="2">Quilo</option>
-        <option value="3">Unidade</option>
+        <option value="1">Liter</option>
+        <option value="2">Kilo</option>
+        <option value="3">Unit</option>
     </select>
     <span asp-validation-for="MeasurementType"></span><br>
     <button class="btn btn-success">Update</button>
