--- a/Views/Management/Products.cshtml
+++ b/Views/Management/Products.cshtml
@@ -44,13 +44,13 @@
                 <td>@product.SalePrice</td>
                 <td>
                     @if(@product.MeasurementType == 1) {
-                        <span>Litro</span>
+                        <span>Liter</span>
                     } else if (@product.MeasurementType == 2) {
-                        <span>Quilo</span>
+                        <span>Kilo</span>
                     } else if (@product.MeasurementType == 3) {
-                        <span>Unidade</span>
+                        <span>Unit</span>
                     } else {
-                        <span>Inválido</span>
+                        <span>Invalid</span>
                     }
                 </td>
                 <td>
