--- a/Views/Management/NewProduct.cshtml
+++ b/Views/Management/NewProduct.cshtml
@@ -18,10 +18,10 @@
     <select class="form-control" asp-for="SupplierID" asp-items='@(new SelectList(@ViewBag.Suppliers, "Id", "Name"))'></select>
     <span asp-validation-for="SupplierID"></span><br>
     <label asp-for="PurchasePrice">Purchase price</label>
-    <input type="number" step="any" asp-for="PurchasePrice" class="form-control" placeholder="0.00">
+    <input type="number" step="0.0001" asp-for="PurchasePrice" class="form-control" placeholder="0.0000">
     <span asp-validation-for="PurchasePrice"></span><br>
     <label asp-for="SalePrice">Sale price</label>
-    <input type="number" step="any" asp-for="SalePrice" class="form-control" placeholder="0.00">
+    <input type="number" step="0.0001" asp-for="SalePrice" class="form-control" placeholder="0.0000">
     <span asp-validation-for="SalePrice"></span><br>
     <label asp-for="MeasurementType">Measurement type</label>
     <select class="form-control" asp-for="MeasurementType">
