--- a/Views/Management/NewDiscountedSale.cshtml
+++ b/Views/Management/NewDiscountedSale.cshtml
@@ -15,7 +15,7 @@
     <select class="form-control" asp-for="ProductId" asp-items='@(new SelectList(@ViewBag.Products, "Id", "Name"))'></select>
     <span asp-validation-for="ProductId"></span><br>
     <label asp-for="Percentage">Percentage</label>
-    <input type="number" min="0" max="100" asp-for="Percentage" class="form-control" placeholder="0%">
+    <input type="number" step="0.01" min="0.01" max="1.00" asp-for="Percentage" class="form-control" placeholder="0.00">
     <span asp-validation-for="Percentage"></span><br>
     <button class="btn btn-success">Register</button>
 </form>
