--- a/Views/CashDesk/Index.cshtml
+++ b/Views/CashDesk/Index.cshtml
@@ -85,7 +85,7 @@
             <hr>
             <div class="col-sm-4"></div>
             <div class="col-sm-4 text-center">
-                <button type="button" class="btn btn-success" style="width: 95px;">Checkout</button>
+                <button type="button" class="btn btn-success" style="width: 95px;" data-toggle="modal" data-target="#sale-modal">Checkout</button>
                 <button type="button" class="btn btn-danger" style="width: 95px;">Cancel</button>
             </div>
             <div class="col-sm-4"></div>
