refactor: add br tag

--- a/Views/CashDesk/Index.cshtml
+++ b/Views/CashDesk/Index.cshtml
@@ -109,7 +109,7 @@
             <h4>Total: $ 65.90 </h3>
             <hr>
             <p>Amount paid:</p>
-            <input type="number" placeholder="0.00" class="form-control">
+            <input type="number" placeholder="0.00" class="form-control"><br>
             <p>Change:</p>
             <input type="number" placeholder="0.00" disabled class="form-control">  
         </div>
