feat: create sales view

--- a/Views/Management/Index.cshtml
+++ b/Views/Management/Index.cshtml
@@ -60,7 +60,7 @@
         </div>
         <div class="mr-5">Sales</div>
         </div>
-        <a class="card-footer text-white clearfix small z-1" href="#">
+        <a class="card-footer text-white clearfix small z-1" asp-action="Sales" asp-controller="Management">
         <span class="float-left">View all</span>
         <span class="float-right">
             <i class="fas fa-angle-right"></i>
