refactor: change stocks icon

--- a/Views/Shared/_LayoutManagement.cshtml
+++ b/Views/Shared/_LayoutManagement.cshtml
@@ -86,7 +86,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" asp-action="Stocks" asp-controller="Management">
-          <i class="fas fa-fw fa-percent"></i>
+          <i class="fas fa-fw fa-cubes"></i>
           <span>Stock</span></a>
       </li>
       <li class="nav-item">
